--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon index.js",
+    "lint": "eslint app/**/*.js",
+    "serve": "node index.js",
+    "start": "node serve"
   },
   "repository": {
     "type": "git",
